k8s/auth-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db-depl 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db 
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-srv
spec:
  selector:
    app: auth-db 
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
