k8s/auth-psql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-psql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-psql
  template:
    metadata:
      labels:
        app: auth-psql
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: auth-psql-srv
spec:
  selector:
    app: auth-psql
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
