k8s/mail-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail
  template:
    metadata:
      labels:
        app: mail
    spec:
      containers:
        - name: mail
          image: muhmdajeer/mail
        - name: MAIL_EMAIL
          valueFrom:
            secretKeyRef:
              name: mail
              key: MAIL_EMAIL
        - name: MAIL_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mail
              key: MAIL_PASSWORD
          ports:
            - containerPort: 3000
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: mail-srv
spec:
  selector:
    app: mail
  ports:
    - name: mail
      protocol: TCP
      port: 3000
      targetPort: 3000
