k8s/psql-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql-db-depl 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql-db 
  template:
    metadata:
      labels:
        app: psql-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: psql-db-srv
spec:
  selector:
    app: psql-db 
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
