k8s/workspace-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace
  template:
    metadata:
      labels:
        app: workspace
    spec:
      containers:
        - name: workspace
          image: muhmdajeer/workspace
          ports:
            - containerPort: 3000
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: workspace-srv
spec:
  selector:
    app: workspace
  ports:
    - name: workspace
      protocol: TCP
      port: 3000
      targetPort: 3000
